[package]
name = "rpc_ipc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
    "fs",
    "io-util",
] }
bincode = { version = "2.0.0-rc.3" }
uuid = { version = "1.10", features = ["v4"] }
rpc_ipc_macros = { path = "./rpc_ipc_macros/" }

[workspace]
members = ["rpc_ipc_macros"]
